[package]
name = "naive_bayes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
supervised_learning = {git = "https://github.com/gjf2a/supervised_learning"}
histogram_macros = {git = "https://github.com/gjf2a/histogram_macros"}
hash_histogram = "0.7"
trait-set = "0.3.0"